Classes Rendenrer, Windows començades
diferents canvis en el codi

--- a/src/gameProject/gameProject.vcxproj
+++ b/src/gameProject/gameProject.vcxproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <ClInclude Include="Button.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Window.h" />
