--- a/src/gameProject/gameProject.vcxproj.filters
+++ b/src/gameProject/gameProject.vcxproj.filters
@@ -9,10 +9,6 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Source Files\Controller">
       <UniqueIdentifier>{f765d14a-f663-40bf-b6f3-3e4e58481560}</UniqueIdentifier>
     </Filter>
@@ -22,7 +18,7 @@
     <Filter Include="Source Files\View">
       <UniqueIdentifier>{b2a11be5-3d42-4f4d-93b8-6af95cff9681}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Other">
+    <Filter Include="Source Files\Utils">
       <UniqueIdentifier>{c8cd99ec-6c03-4d8c-894e-c40f904b7288}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -30,22 +26,82 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameScene.cc">
+      <Filter>Source Files\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cc">
+      <Filter>Source Files\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuScene.cc">
+      <Filter>Source Files\Model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
       <Filter>Source Files\Controller</Filter>
     </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Source Files\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>Source Files\View</Filter>
-    </ClInclude>
     <ClInclude Include="Button.h">
       <Filter>Source Files\Model</Filter>
     </ClInclude>
-    <ClInclude Include="Window.h">
+    <ClInclude Include="System.hh">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Assert.hh">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="IOManager.hh">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.hh">
+      <Filter>Source Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Grid.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="GUI.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="ID.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuScene.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Sprite.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.hh">
+      <Filter>Source Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngine.hh">
+      <Filter>Source Files\Controller</Filter>
+    </ClInclude>
+    <ClInclude Include="InputManager.hh">
+      <Filter>Source Files\Controller</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.hh">
+      <Filter>Source Files\Controller</Filter>
+    </ClInclude>
+    <ClInclude Include="TimeManager.hh">
+      <Filter>Source Files\Controller</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.hh">
       <Filter>Source Files\View</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.hh">
+      <Filter>Source Files\View</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.hh">
+      <Filter>Source Files\Utils</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
