Afegides les classes Snake, SnakeGrid
Estan per implementar, no acabo de veure clar com fer-ho

--- a/src/gameProject/gameProject.vcxproj
+++ b/src/gameProject/gameProject.vcxproj
@@ -138,6 +138,8 @@
     <ClInclude Include="Resource.hh" />
     <ClInclude Include="Scene.hh" />
     <ClInclude Include="SceneManager.hh" />
+    <ClInclude Include="Snake.hh" />
+    <ClInclude Include="SnakeGrid.hh" />
     <ClInclude Include="SnakeScene.hh" />
     <ClInclude Include="Sprite.hh" />
     <ClInclude Include="System.hh" />
