Afegits els .cc de Snake i SnakeGrid
També hi ha diferents canvis / petites addicions en diferents classes.
Ara al passar a la SnakeScene també es passa la dificultat que hem
escollit

--- a/src/gameProject/gameProject.vcxproj
+++ b/src/gameProject/gameProject.vcxproj
@@ -118,6 +118,8 @@
     <ClCompile Include="Grid.cc" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuScene.cc" />
+    <ClCompile Include="Snake.cc" />
+    <ClCompile Include="SnakeGrid.cc" />
     <ClCompile Include="SnakeScene.cc" />
   </ItemGroup>
   <ItemGroup>
